assets/CSS/style.css
/*caroussel*/


.carousel-slide {
    object-fit: cover;
}
.carousel-item img {
    height: 95vh; 
    overflow: hidden;
      } 



/* testimonials */

.testimonial-section {
    margin: 0 20px;
}

.flexbox-container-text {
    font-family: 'BenchNine', sans-serif;
    text-align: justify;
    max-width: 400px;
    margin-top: 15px;
}

.flexbox-container-picture {
    display: block;
    max-width: 300px;
    margin: 0 auto;
    object-fit: cover;
}

.button {
    display: block;
    margin: 0 auto;
    width: 150px;

}

/* Contact form */

.contact-form {
    margin-top: 20px;
    
}

.contact-form-heading{
    background-color: #e5e7ec;
    position:relative;
    width: 100vw;
    
}

.contact-form-heading1{
    position:relative;
    top: 15px; 
    text-align: center;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
    
}

.contact-form-heading2{
    text-align: center;
    font-family: 'Great Vibes', cursive;
    font-size: 3em;
}

.form-element {
    display: block;
    margin: 5px auto;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
    padding: 5px;
    width: 270px;
    
}

.form-text {
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
    padding: 5px;
    text-align: center;
    
}

.form-text-area {
    display: block;
    margin: 10px auto;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
    width:90%; 
    max-width: 800px;
}

/* Footer */

footer {
    background-color: #e5e7ec;
    height:50px;
    position: fixed;
    bottom: 0;
    right: 0;
    }

footer div {
    text-align:center;
    padding-top:10px;
    }

.link-socmed {
    padding-left:5px;
    padding-right:5px;
    color:black;
    }

.link-socmed:hover {
    color: #949599;
    }

.copyright {position:absolute; 
    display:inline-block;
    right:5px; 
    bottom:0; 
    margin:0 auto;
    font-family: 'BenchNine', sans-serif;
    }

/* Gallery */

.gallery-container {
    display: flex;   
    max-width: 100vw;
    justify-content: center;
   
}

.gallery-container img {
    width: 90vw; 
    margin: 3px auto;
    border-radius: 8px;
}

.gallery-text {
    font-family: 'BenchNine', sans-serif;
    text-align: center;
}

/* media quieries */

@media screen and (max-width: 1386px) {
    .hidden-testimonial {
        display: none !important;
    }
}

@media screen and (min-width: 1387px) {
    .visible-testimonial {
        display: none !important;
    }
}

@media screen and (min-width: 800px) {
    .gallery-container img { 
        width: 49vw;
    }
}

@media screen and (min-width: 900px) {
    .gallery-container img { 
        width: 32vw;
    }
}

@media screen and (min-width: 1025px) {
    .gallery-container img {
        width: 24vw;
    }
}

